--- a/src/Anonco/Views/Shared/_Layout.cshtml
+++ b/src/Anonco/Views/Shared/_Layout.cshtml
@@ -21,9 +21,17 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Board <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>@Html.ActionLink("Announcements", "Index", "Board")</li>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <li class="divider"></li>
+                                <li>@Html.ActionLink("Add announcement", "Create", "Board")</li>
+                            }
+                        </ul>
+                    </li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
