--- a/src/Anonco/Views/Shared/_Layout.cshtml
+++ b/src/Anonco/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                             <li>@Html.ActionLink("Announcements", "Index", "Board")</li>
                             @if (User.Identity.IsAuthenticated)
                             {
+                                <li>@Html.ActionLink("My announcements", "My", "Board")</li>
                                 <li class="divider"></li>
                                 <li>@Html.ActionLink("Add announcement", "Create", "Board")</li>
                             }
