Added User Repo

--- a/src/Anonco/Views/Error/Index.cshtml
+++ b/src/Anonco/Views/Error/Index.cshtml
@@ -1,10 +1,8 @@
-﻿@model HttpStatusCode
-
-@{
+﻿@{
     ViewBag.Title = "Error";
 }
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
-<img src="@("https://http.cat/" + (int)Model)" class="img-responsive" alt="cat code"/>
+<img src="https://http.cat/404" class="img-responsive" alt="cat code" />
