--- a/src/Anonco/Views/Board/My.cshtml
+++ b/src/Anonco/Views/Board/My.cshtml
@@ -34,19 +34,19 @@
                     <td>@announcement.Title</td>
                     <td>@announcement.AdditionDate.Date.ToShortDateString()</td>
                     <td>
-                        @Html.ActionLink(" ", "Details", new { id = announcement.Id }, new { @class = "btn btn-info glyphicon glyphicon-search" })
+                        @Html.ActionLink(" ", "Details", new { id = announcement.Id }, new { @class = "btn btn-info btn-xs glyphicon glyphicon-search" })
                         @if (User.Identity.IsAuthenticated
                     && (User.IsInRole(AppStrings.AdminRoleName)
                         || User.IsInRole(AppStrings.ModRoleName)
                         || announcement.User.Id == User.Identity.GetUserId()))
                         {
-                            @Html.ActionLink(" ", "Edit", new { id = announcement.Id }, new { @class = "btn btn-primary glyphicon glyphicon-pencil" })
+                            @Html.ActionLink(" ", "Edit", new { id = announcement.Id }, new { @class = "btn btn-primary btn-xs glyphicon glyphicon-pencil" })
                         }
                         @if (User.Identity.IsAuthenticated
                     && (User.IsInRole(AppStrings.AdminRoleName)
                         || announcement.User.Id == User.Identity.GetUserId()))
                         {
-                            @Html.ActionLink(" ", "Delete", new { id = announcement.Id }, new { @class = "btn btn-danger glyphicon glyphicon-trash" })
+                            @Html.ActionLink(" ", "Delete", new { id = announcement.Id }, new { @class = "btn btn-danger btn-xs glyphicon glyphicon-trash" })
                         }
                     </td>
                 </tr>
