--- a/src/Anonco/Views/Shared/_LoginPartial.cshtml
+++ b/src/Anonco/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNet.Identity
+﻿@using Anonco.Shared
+@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -6,6 +7,10 @@
     @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
+        @if (User.IsInRole(AppStrings.AdminRoleName))
+        {
+            <li>@Html.ActionLink("Admin Panel", "Index", "Admin")</li>
+        }
         <li>
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
