--- a/src/Anonco/Views/Admin/Index.cshtml
+++ b/src/Anonco/Views/Admin/Index.cshtml
@@ -40,7 +40,7 @@
                     <td>@user.FullName</td>
                     <td>@user.Email</td>
                     <td>
-                        @Html.ActionLink(" ", "Delete", new { id = user.Id }, new { @class = "btn btn-danger glyphicon glyphicon-trash" })
+                        @Html.ActionLink(" ", "Delete", new { id = user.Id }, new { @class = "btn btn-danger btn-xs glyphicon glyphicon-trash" })
                     </td>
                 </tr>
                 i++;
