--- a/src/Anonco/Views/Home/Index.cshtml
+++ b/src/Anonco/Views/Home/Index.cshtml
@@ -1,31 +1,39 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Anonco";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>ANONCO</h1>
+    <p class="lead">Anonco is a portal for users who are looking for short and concise announcements.<br/>Join to our community now!</p>
+    <p>@Html.ActionLink("Register »","Register","Account", null, new {@class = "btn btn-primary btn-lg" })</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            If you have an account, feel free to view, add and edit your announcements. Try to make your ads look good, this will encourage others to contact you. Let's go!
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>@Html.ActionLink("Login »", "Login", "Account", null, new { @class = "btn btn-default" })</p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Browse announcements</h2>
+        <p>
+            You do not need to create an account if you only want to view the announcements. You can view them now.
+        </p>
+        @Html.ActionLink("Browse »", "Index", "Board", null, new { @class = "btn btn-default" })
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Contact</h2>
+        <p>
+            If you have a problem. Contact us.
+            <address>
+                Anonco Group<br />
+                ul. Grudziądzka 69, 87-100 Toruń<br />
+                <abbr title="Phone">P:</abbr>
+                +48 123 123 123
+            </address>
+        </p>
+        <p><a class="btn btn-default" href="mailto:support@anonco.net">Send email</a></p>
     </div>
 </div>
